# zen-ai-agent

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  SKILL.md  install.sh  notes.md
bench/: __main__.py  cli.py  improve.py  metrics.py  parallel_test.py  pyproject.toml  report.py  runner.py  scenario.py  verify.py
bench/scenarios/: __init__.py  amazon_cart.py  linkedin_vc.py  navigation.py  phase10_features.py  phase6_features.py  phase7_features.py  phase8_features.py  phase9_features.py  youtube_history.py
bench/tests/: test_improve.py  test_metrics.py  test_report.py  test_scenarios.py
browser/: zenleap_agent.uc.js
browser/actors/: ZenLeapAgentChild.sys.mjs  ZenLeapAgentParent.sys.mjs
docs/: architecture.md  index.md  phase7-cookies-storage.md  phase7-network.md  phase7-session.md  phase8-accessibility.md  phase8-incremental-dom.md  phase8-smart-dom.md  phase9-multi-tab.md  phase9-recording.md  phase9-self-healing.md  phase9-visual-grounding.md  trusted-keyboard-input.md
mcp/: pyproject.toml  requirements.txt  zenleap_mcp_server.py  zenleap_session.py
scripts/: test_mcporter_parallel_sessions.sh
tests/: test_zenleap_mcp.py
tests/e2e/: e2e_phase10.py  e2e_phase2.py  e2e_phase3.py  e2e_phase4.py  e2e_phase5.py  e2e_phase8.py  e2e_phase9.py
