[project]
name = "zenleap-bench"
version = "0.1.0"
description = "Observability and benchmarking framework for ZenLeap AI"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
