[project]
name = "zen-ai-agent-mcp"
version = "3.0.0"
description = "MCP server for Zen AI Agent — browser automation for Claude Code and AI agents"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.26.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
